Memperbaiki smells code